Try to solve the wave contrast problem

--- a/css/style.css
+++ b/css/style.css
@@ -171,12 +171,9 @@ nav li{
   width: 250px;
   height: 30px;
   background: rgb(157, 69, 92);
+  color:#FBE3E7;
   text-align: center;
   font-size: 20px;
-}
-
-a:link{
-  color:#FBE3E7;
 }
 
 .asidelink{
